# hnet-impl

./: .gitignore  README.md  example.py  pyproject.toml
docs/: Engineering.md  README.md
src/hnet_impl/: __init__.py  conceptual.py  config_hnet.py  lin.py  modeling_hnet.py  norm.py  sampling.py  torchisms.py  xf.py
src/hrm/: layers.py  sparse_embedding.py
src/hrm/hrm/: hrm_act_v1.py
